# fastapi-QuizBox

./: .gitignore  README.md  alembic.ini  docker-compose.yaml  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 18d4c8fba2f2_new_migration.py  2d51de6145c5_1_migration.py  3267e9b16614_1_migration.py  61f4d34244d2_3_migration.py  7a86c76d0884_4_migration.py  9f173d7f5e91_2_migration.py  cb9a7479adfd_2_migration.py  ead86fd4dbab_5_migration.py
app/alembic/: env.py
app/backend/: Dockerfile  alembic.ini  main.py  requirements.txt
app/backend/alembic/: env.py
app/backend/alembic/versions/: a40397ac08a3_3_migration.py
app/backend/db/: config.py  database.py
app/backend/models/: answers.py  mixins.py  questions.py  tags.py  users.py  votes.py
app/backend/routers/: answer.py  question.py  tag.py  user.py  vote.py
app/backend/schema/: _answer.py  _question.py  _vote.py
app/backend/utils/: answer_crud.py  question_crud.py  tag_crud.py  user_crud.py  vote_crud.py
app/db/: config.py
app/frontend/: Dockerfile  package-lock.json
app/frontend/src/: main.js
app/models/: answers.py  mixins.py  questions.py  tags.py  users.py  votes.py
app/routers/: _user.py  answer.py  question.py  tag.py  tags.py  user.py  vote.py
app/schema/: _answer.py  _question.py  _tag.py  _user.py  _vote.py  users.py
app/utils/: crud.py  question_crud.py  tag_crud.py  user_crud.py  vote_crud.py
services/backend/: Dockerfile  requirements.txt
services/backend/src/: db_connect.py  main.py
services/frontend/: package-lock.json
(+16 files in other folders)
